# LabProg_ToDoList

./: CMakeLists.txt  Interface.cpp  Interface.h  README.md  Task.h  TaskList.cpp  TaskList.h  TaskManager.cpp  TaskManager.h  iface.cpp  iface.h  main.cpp  taskList.txt
ToDoList/: CMakeLists.txt  Task.h  TaskList.cpp  TaskList.h  iface.cpp  iface.h
google_test/: CMakeLists.txt  Unit_testing.cpp  prova.cpp
